마이페이지 - 회원정보 변경

--- a/src/main/resources/templates/mypage/editor.html
+++ b/src/main/resources/templates/mypage/editor.html
@@ -6,45 +6,51 @@
     <link href="/css/mypage/editor.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="/css/header_foter/header.css">
     <link rel="stylesheet" href="/css/header_foter/foter.css" />
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script type="text/javascript" src="/js/mypage/editor.js" defer></script>
 </head>
 <body>
     <main>
         <div th:replace="header_foter/header :: header"></div>
-        <div class="body_container">
-            <input type="hidden" id="id" name="id" th:value="${session.id}">
-            <div class="table_container">
-                <table class="table_content">
-                    <tr class="table_tr">
-                        <th>아이디</th>
-                        <td>[[${vo.getUserID()}]]</td>
-                    </tr>
-                    <tr class="table_tr">
-                        <th>비밀번호</th>
-                        <td><input type="button" class="pw_btn" onclick="pwEditor()" value="비밀번호 변경"></td>
-                    </tr>
-                    <tr class="table_tr">
-                        <th>이름</th>
-                        <td><input class="input_text" name="userName" id="userName" th:value="${vo.getUserName()}"></td>
-                    </tr>
-                    <tr class="table_tr">
-                        <th>생년월일</th>
-                        <td>[[${vo.getUserBirth()}]]</td>
-                    </tr>
-                    <tr class="table_tr">
-                        <th>전화번호</th>
-                        <td><input class="input_text" name="userTell" id="userTell" th:value="${vo.getUserTell()}"></td>
-                    </tr>
-                    <tr class="table_tr">
-                        <th>이메일</th>
-                        <td><input class="input_text" name="userEmail" id="userEmail" th:value="${vo.getUserEmail()}"></td>
-                    </tr>
-                </table>
+        <form name="f" th:action="@{/mypage/editor/update}" th:object="${vo}" method="post">
+            <div class="body_container">
+                <input type="hidden" id="userID" name="userID" th:value="${session.id}">
+                <div class="table_container">
+                    <table class="table_content">
+                        <tr class="table_tr">
+                            <th>아이디</th>
+                            <td>[[${vo.getUserID()}]]</td>
+                        </tr>
+                        <tr class="table_tr">
+                            <th>비밀번호</th>
+                            <td><input type="button" class="pw_btn" onclick="pwEditor()" value="비밀번호 변경"></td>
+                        </tr>
+                        <tr class="table_tr">
+                            <th>이름</th>
+                            <td><input class="input_text" name="userName" id="userName" th:value="${vo.getUserName()}"></td>
+                        </tr>
+                        <tr class="table_tr">
+                            <th>생년월일</th>
+                            <td>[[${vo.getUserBirth()}]]</td>
+                        </tr>
+                        <tr class="table_tr">
+                            <th>전화번호</th>
+                            <td><input class="input_text" name="userTell" id="userTell" th:value="${vo.getUserTell()}"></td>
+                        </tr>
+                        <tr class="table_tr">
+                            <th>이메일</th>
+                            <td><input class="input_text" name="userEmail" id="userEmail" th:value="${vo.getUserEmail()}"></td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="btn_content">
+                    <input type="button" class="save_btn" id="saveBtn" name="saveBtn" onclick="save()" value="수정하기">
+                </div>
+                <div class="btn_content2">
+                    <input type="button" class="back_btn" onclick="HomeBack()" value="취소">
+                </div>
             </div>
-            <div class="btn_content">
-                <input type="button" class="save_btn" onclick="#" value="수정하기">
-            </div>
-        </div>
+        </form>
         <div th:replace="header_foter/foter :: foter"></div>
     </main>
 </body>
