--- a/src/main/resources/templates/header_foter/header.html
+++ b/src/main/resources/templates/header_foter/header.html
@@ -16,8 +16,8 @@
                 <th:block th:if="${session.id != null}">
                     <input type="hidden" id="id" name="id" th:value="${session.id}">
                     <span class="userName"><b>[[${session.name}]]</b> 님</span>
-                    <button class="schedule"  onclick="schedule()">나의 일정</button>
-                    <button class="mypage" onclick="myPage()">마이페이지</button>
+                    <button class="schedule"  onclick="schedule()" th:value="${session.id}">나의 일정</button>
+                    <button class="mypage" onclick="myPage()" >마이페이지</button>
                     <button class="logout" onclick="logout()">로그아웃</button>
                 </th:block>
                 <th:block th:if="${session.binID != null}">
@@ -61,7 +61,8 @@
                  location.href="/login";
             }
             function schedule(){
-                 location.href="/schedule";
+                let userId = document.getElementById("id").value;
+                location.href = "/diary/" + userId;
             }
             function logout(){
                 if(confirm("로그아웃 하시겠습니까?") == true){
