--- a/src/main/resources/templates/login/binSignUp.html
+++ b/src/main/resources/templates/login/binSignUp.html
@@ -29,9 +29,15 @@
             </div>
             <div class="type_content">
                 <input type="radio" name="binCate" id="1" value="1" checked>
-                <label for="1">티켓</label>
+                <label for="1">항공</label>
                 <input type="radio" name="binCate" id="2" value="2">
-                <label for="2">패키지</label>
+                <label for="2">숙박</label>
+            </div>
+            <div class="type_content">
+                <input type="radio" name="binCate" id="3" value="3">
+                <label for="3">티켓</label>
+                <input type="radio" name="binCate" id="4" value="4">
+                <label for="4">패키지</label>
             </div>
             <div class="content">
                 <input type="text" name="binName" id="binName" placeholder="상호명">
