--- a/src/main/resources/templates/header_foter/header.html
+++ b/src/main/resources/templates/header_foter/header.html
@@ -45,7 +45,7 @@
                 <li><a href="/air">항공</a></li>
                 <li><a href="/hotel">숙박</a></li>
                 <li><a href="/ticket">티켓</a></li>
-                <li><a href="/pack">패키지</a></li>
+                <li><a href="/packages">패키지</a></li>
                 <li>자유게시판</li>
             </ul>
         </nav>
