--- a/src/main/resources/static/css/package/package.css
+++ b/src/main/resources/static/css/package/package.css
@@ -48,16 +48,6 @@
     margin-left: 150px;
 }
 
-.header_icons {
-    display: flex;
-    justify-content: center;
-    align-items: end;
-    margin-bottom: 10px;
-    gap: 50px;
-    font-size: 40px;
-    margin-left: 50px;
-}
-
 .search_results {
     display: flex;
     justify-content: space-between;
@@ -86,4 +76,67 @@
 .search_results .wishlist i {
     color: red;
     margin-left: 5px;
+}
+
+.package_list {
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+.package_item {
+    display: flex;
+    margin-bottom: 20px;
+    border: 1px solid #ddd;
+    padding: 15px;
+    border-radius: 5px;
+}
+
+.package_image {
+    position: relative;
+    width: 200px;
+    height: 150px;
+    margin-right: 20px;
+}
+
+.package_image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.wishlist_icon {
+    position: absolute;
+    top: 10px;
+    right: 10px; /* 수정된 위치 */
+    color: white;
+    font-size: 20px;
+    text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
+}
+
+.package_info {
+    flex: 1;
+}
+
+.package_info h3 {
+    margin-top: 0;
+    color: #333;
+}
+
+.package_info p {
+    margin: 5px 0;
+    color: #666;
+}
+
+.travel_period, .price {
+    font-weight: bold;
+}
+
+.detail_btn {
+    background-color: #e74c3c;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    cursor: pointer;
+    border-radius: 3px;
+    margin-top: 10px;
 }
