--- a/src/main/resources/static/css/hotel/hotel_pay.css
+++ b/src/main/resources/static/css/hotel/hotel_pay.css
@@ -1,75 +1,73 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    margin: 0;
-    padding: 120px;
-}
-
-.container {
-    background-color: #fff;
-    padding: 10px;
-    border-radius: 10px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    max-width: 800px;
-    margin: 40px auto;
-}
-
-h1 {
-    font-size: 1.5em;
-    margin-bottom: 20px;
-}
-
-.payment-methods {
-    margin-bottom: 20px;
-}
-
-.method {
-    margin-bottom: 10px;
-}
-
-.method input {
-    margin-right: 10px;
-}
-
-.payment-button-container {
-    text-align: center;
-    margin-top: 50px;
-}
-
-.payment-button-container button {
-    background-color: #0066cc;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    font-size: 1.2em;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
-
-.payment-button-container button:hover {
-    background-color: #0056b3;
-}
-
-.summary {
-    margin-top: 30px;
-}
-
-.summary h2 {
-    font-size: 1.2em;
-    margin-bottom: 10px;
-}
-
-.summary ul {
-    list-style: none;
-    padding: 0;
-}
-
-.summary ul li {
-    margin-bottom: 5px;
-}
-
-.summary h3 {
-    font-size: 1.5em;
-    color: #ff5733;
-    margin-top: 10px;
-}
+        font-family: Arial, sans-serif;
+        background-color: #f4f4f4;
+        margin: 0;
+        padding: 150px;
+    }
+    .container {
+        background-color: #fff;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+        max-width: 800px;
+        margin: 40px auto;
+    }
+    h1 {
+        font-size: 1.5em;
+        margin-bottom: 20px;
+    }
+    .payment-methods {
+        margin-bottom: 20px;
+    }
+    .method {
+        margin-bottom: 10px;
+        padding: 10px;
+        border: 1px solid #ddd;
+        border-radius: 10px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+    }
+    .method:hover {
+        background-color: #f0f0f0;
+    }
+    .method input {
+        margin-right: 10px;
+    }
+    .method label {
+            cursor: pointer;
+        }
+    .summary {
+        margin-top: 30px;
+    }
+    .summary h2 {
+        font-size: 1.2em;
+        margin-bottom: 10px;
+    }
+    .summary ul {
+        list-style: none;
+        padding: 0;
+    }
+    .summary ul li {
+        margin-bottom: 5px;
+    }
+    .summary h3 {
+        font-size: 1.5em;
+        color: #ff5733;
+        margin-top: 10px;
+    }
+    .payment-button-container {
+        text-align: center;
+        margin-top: 50px;
+    }
+    .payment-button-container button {
+        background-color: #0066cc;
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        font-size: 1.2em;
+        cursor: pointer;
+        transition: background-color 0.3s;
+    }
+    .payment-button-container button:hover {
+        background-color: #0056b3;
+    }
