--- a/src/main/resources/templates/hotel/hotelPayment.html
+++ b/src/main/resources/templates/hotel/hotelPayment.html
@@ -42,20 +42,21 @@
       <label for="samsungPay">삼성페이</label>
     </div>
   </div>
-
   <div class="summary">
     <h2>예상 금액</h2>
-    <p>서울 -> 타이베이</p>
+    <p>호텔 이름: <span th:text="${hotel.hotelName}"></span></p>
+    <p>체크인: <span th:text="${checkin}"></span></p>
+    <p>체크아웃: <span th:text="${checkout}"></span></p>
+    <p>인원수: <span th:text="${guestCount}"></span></p>
     <ul>
-      <li>항공권: 949,800원</li>
-      <li>할인: -4,000원</li>
+      <li>숙박 요금: <span th:text="'₩' + ${#numbers.formatDecimal(hotel.hotelPrice, 0, 'COMMA', 0, 'POINT')}"></span></li>
+      <li>할인: -<span th:text="'₩' + ${#numbers.formatDecimal(4000, 0, 'COMMA', 0, 'POINT')}"></span></li>
     </ul>
-    <h3>총 금액: 945,800원</h3>
+    <h3>총 금액: <span th:text="'₩' + ${#numbers.formatDecimal(hotel.hotelPrice - 4000, 0, 'COMMA', 0, 'POINT')}"></span></h3>
   </div>
-
   <div class="payment-button-container">
-  <button onclick="processPayment()">949,800원 결제</button>
-</div>
+    <button id="payment-button" th:data-hotel-no="${hotel.hotelNO}" th:data-checkin="${checkin}" th:data-checkout="${checkout}" th:data-guest-count="${guestCount}">결제</button>
+  </div>
 </div>
 </body>
 </html>
