호텔 결제 후 orders에 데이터 넘기기

--- a/src/main/resources/templates/hotel/hotelDetail.html
+++ b/src/main/resources/templates/hotel/hotelDetail.html
@@ -55,7 +55,7 @@
         <div>퀸베드 (3)</div>
     </div>
     <div class="button-container">
-        <button id="go-to-payment" data-hotel-no="${hotel.hotelNO}" data-checkin="${checkin}" data-checkout="${checkout}" data-guest-count="${guestCount}">결제 페이지로 이동하기</button>
+        <button id="go-to-payment" th:data-hotel-no="${hotel.hotelNO}" th:data-checkin="${checkin}" th:data-checkout="${checkout}" th:data-guest-count="${guestCount}">결제 페이지로 이동하기</button>
     </div>
 </div>
 </body>
