--- a/src/main/resources/templates/hotel/hotelMain.html
+++ b/src/main/resources/templates/hotel/hotelMain.html
@@ -17,8 +17,8 @@
 <div class="search_container">
     <form class="hotel_text" id="hotelForm">
         <input type="text" id="destination" name="country" placeholder="어디로 떠나시나요?" required>
-        <input type="text" id="checkin" name="checkin" placeholder="체크인">
-        <input type="text" id="checkout" name="checkout" placeholder="체크아웃">
+        <input type="text" id="checkin" name="checkin" placeholder="가는날">
+        <input type="text" id="checkout" name="checkout" placeholder="오는날">
         <select id="guestCount" name="guestCount">
             <option value="1">1명</option>
             <option value="2" selected>2명</option>
