--- a/src/main/resources/static/css/schedule/schedule.css
+++ b/src/main/resources/static/css/schedule/schedule.css
@@ -16,3 +16,12 @@ body, html {
     margin: 0;
 
 }
+
+.form-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.all-day-form, .time-specific-form {
+    width: 45%;
+}
