--- a/src/main/resources/templates/hotel/hotelMain.html
+++ b/src/main/resources/templates/hotel/hotelMain.html
@@ -16,7 +16,7 @@
 </header>
 <div class="search_container">
     <form class="hotel_text" id="hotelForm">
-        <input type="text" id="destination" name="country" placeholder="어디로 떠나시나요?" required>
+        <input type="text" id="destination" name="destination" placeholder="어디로 떠나시나요?">
         <input type="text" id="checkin" name="checkin" placeholder="가는날">
         <input type="text" id="checkout" name="checkout" placeholder="오는날">
         <select id="guestCount" name="guestCount">
