--- a/src/main/resources/static/css/board/boardList.css
+++ b/src/main/resources/static/css/board/boardList.css
@@ -17,7 +17,7 @@ body, html {
 .board_con {
     width: 700px;
     height: 400px;
-    margin-top: 100px;
+    margin-top: 50px;
     margin-left : auto;
     margin-right : auto;
     border-collapse: collapse;
@@ -177,3 +177,26 @@ body, html {
     margin-top: 20px;
 }
 
+
+
+.filter-container button {
+    width : 200px;
+    height: 50px;
+    border : 0.5px solid #ddd;
+    font-weight : bolder;
+    background : inherit;
+    margin-top : 80px;
+    cursor : pointer;
+
+}
+
+.filter-container button:hover{
+    background : #3b75ff;
+    color : white;
+
+}
+
+.filter-container button.active {
+    background-color: #3b75ff;
+    color: white;
+}
