--- a/src/main/resources/templates/nation/natDetaile.html
+++ b/src/main/resources/templates/nation/natDetaile.html
@@ -51,7 +51,19 @@
         </div>
 
     </div>
-
+    <div class="community_container">
+        <div class="coummunity_top">
+            <h3 class="community_text">trabeler들의 진짜 여행후기</h3>
+            <button class="community_detail_btn" > <a href="/board">더보기</a></button>
+        </div>
+        <div class="coummunity_box" th:if="${not #lists.isEmpty(board)}">
+            <div class="coummunity_title" th:each="board : ${board}">
+                <button>
+                    <p th:text="${board.tripTitle}"></p>
+                </button>
+            </div>
+        </div>
+    </div>
 
 
 
