--- a/src/main/resources/templates/nation/natDetaile.html
+++ b/src/main/resources/templates/nation/natDetaile.html
@@ -6,22 +6,19 @@
     <link rel="stylesheet" href="/css/header_foter/header.css">
     <link rel="stylesheet" href="/css/header_foter/foter.css">
     <link rel="stylesheet" href="/css/main/nationDetail.css">
-    <script src="/js/city/city.js" ></script>
+    <script src="/js/city/city.js"></script>
 </head>
 <body>
 <div th:replace="header_foter/header :: header"></div>
 <main>
-
     <div class="nation_detail_con">
         <h1 th:text="${nation.natName}"></h1>
         <div class="city_btn_con">
-            <div  th:each="city : ${nation.cities}">
+            <div th:each="city : ${nation.cities}">
                 <button class="city_btn" th:text="${city.cityName}" th:data-cityno="${city.cityNO}"></button>
-
             </div>
         </div>
         <div id="image_con" class="image_con"></div>
-
 
         <p class="nat_text" th:text="${nation.natText}"></p>
 
@@ -37,7 +34,6 @@
                 <div class="nat_airtime">
                     <div class="icon_airtime"><p>항공</p></div>
                     <span th:text="${nation.natAirTime}"></span>
-
                 </div>
             </div>
 
@@ -47,41 +43,35 @@
                     <span th:text="${nation.exchange}"></span>
                 </div>
             </div>
-
         </div>
 
-    </div>
-    <div class="community_container">
-        <div class="coummunity_top">
-            <h3 class="community_text">trabeler들의 진짜 여행후기</h3>
-            <button class="community_detail_btn" > <a href="/board">더보기</a></button>
-        </div>
-        <div class="coummunity_box" th:if="${not #lists.isEmpty(board)}">
-            <div class="coummunity_title" th:each="board : ${board}">
-                <button>
-                    <p th:text="${board.tripTitle}"></p>
-                </button>
+        <div class="community_container">
+            <div class="coummunity_top">
+                <h3 class="community_text">게시판</h3>
+                <button class="community_detail_btn"><a href="/board">더보기</a></button>
+            </div>
+            <div class="coummunity_box" th:if="${not #lists.isEmpty(board)}">
+                <div class="coummunity_title" th:each="board : ${board}">
+                    <button>
+                        <p th:text="${board.tripTitle}"></p>
+                    </button>
+                </div>
+            </div>
+            <div class="coummunity_box" th:if="${#lists.isEmpty(board)}">
+                <p>관련된 게시글이 없습니다.</p>
             </div>
         </div>
     </div>
-
-
-
 </main>
 <div th:replace="header_foter/foter :: foter"></div>
-</body>
 <script th:inline="javascript">
-    // Thymeleaf에서 변수를 JavaScript로 가져오기 위해 사용합니다
     var natName = /*[[${nation.natName}]]*/ '일본';
 
-    // 이미지 폴더에서 가져올 이미지들의 정보를 객체 배열로 정의합니다
     var images = [
         { title: '일본', filenames: ['일본2.jpeg', '일본3.jpeg', '일본4.jpeg'] },
         { title: '호주', filenames: ['호주1.jpg', '호주2.jpg'] }
-        // 다른 국가들에 대한 이미지도 필요에 따라 추가할 수 있습니다
     ];
 
-    // natName과 일치하는 국가의 이미지 파일들을 가져와서 표시합니다
     images.forEach(function(item) {
         if (item.title === natName) {
             item.filenames.forEach(function(filename) {
@@ -93,4 +83,5 @@
         }
     });
 </script>
+</body>
 </html>
